--- a/Assets/UI Toolkit/UITemplate.uxml
+++ b/Assets/UI Toolkit/UITemplate.uxml
@@ -5,14 +5,15 @@
             <ui:Button text="Coins: 2100" display-tooltip-when-elided="true" name="HomeCoinsButton" class="button smallButton" />
             <ui:Button text="Gems: 10" display-tooltip-when-elided="true" name="HomeGemsButton" class="button smallButton" />
         </ui:VisualElement>
+        <ui:Label tabindex="-1" text="01:23" display-tooltip-when-elided="true" name="HomeBirdTimer" class="timerLabel" style="position: absolute; width: 100%; height: 100%;" />
         <ui:Button display-tooltip-when-elided="true" name="BirdMenuOpenButton" style="position: absolute; width: 60%; height: 30%; justify-content: flex-start; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; padding-left: 6px; padding-right: 6px; padding-top: 6px; padding-bottom: 6px; left: 20%; top: 35%; background-color: rgba(88, 88, 88, 0);" />
-        <ui:VisualElement name="BirdMenu" style="display: none;">
+        <ui:VisualElement name="BirdMenu" class="popupBackground" style="display: none;">
             <ui:VisualElement style="flex-direction: row; justify-content: space-around; flex-wrap: nowrap; visibility: visible;">
                 <ui:Button text="Pet" display-tooltip-when-elided="true" name="BirdPetButton" class="button smallButton" />
                 <ui:Button text="Send" display-tooltip-when-elided="true" name="BirdSendButton" class="button smallButton" />
                 <ui:Button text="Train" display-tooltip-when-elided="true" name="BirdTrainButton" class="button smallButton" />
             </ui:VisualElement>
-            <ui:Button text="Close" display-tooltip-when-elided="true" name="BirdMenuCloseButton" class="button smallButton" style="width: auto; background-color: rgba(165, 60, 55, 255);" />
+            <ui:Button text="Close" display-tooltip-when-elided="true" name="BirdMenuCloseButton" class="button smallButton" style="width: auto; background-color: rgb(165, 60, 55);" />
         </ui:VisualElement>
         <ui:VisualElement name="HomeBottomBar" style="justify-content: space-between; flex-direction: row;">
             <ui:Button text="Shop" display-tooltip-when-elided="true" name="HomeShopButton" class="button smallButton" />
