--- a/Assets/UI Toolkit/UITemplate.uxml
+++ b/Assets/UI Toolkit/UITemplate.uxml
@@ -2,8 +2,8 @@
     <Style src="project://database/Assets/stylesheet.uss?fileID=7433441132597879392&amp;guid=5153e26b87e5d0451bea3abcc3ccf9e3&amp;type=3#stylesheet" />
     <ui:VisualElement name="HomeScreen" style="flex-grow: 1; justify-content: space-between; display: flex;">
         <ui:VisualElement name="HomeTopBar" style="flex-direction: row; justify-content: flex-start;">
-            <ui:Button text="Coins: 2100" display-tooltip-when-elided="true" name="HomeCoinsButton" class="button smallButton" />
-            <ui:Button text="Gems: 10" display-tooltip-when-elided="true" name="HomeGemsButton" class="button smallButton" />
+            <ui:Button text="Coins: ???" display-tooltip-when-elided="true" name="HomeCoinsButton" class="button smallButton" />
+            <ui:Button text="Gems: ???" display-tooltip-when-elided="true" name="HomeGemsButton" class="button smallButton" />
         </ui:VisualElement>
         <ui:Label tabindex="-1" text="01:23" display-tooltip-when-elided="true" name="HomeBirdTimer" class="timerLabel" style="position: absolute; width: 100%; height: 100%;" />
         <ui:Button display-tooltip-when-elided="true" name="BirdMenuOpenButton" style="position: absolute; width: 60%; height: 30%; justify-content: flex-start; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; padding-left: 6px; padding-right: 6px; padding-top: 6px; padding-bottom: 6px; left: 20%; top: 35%; background-color: rgba(88, 88, 88, 0);" />
