--- a/Assets/UI Toolkit/UITemplate.uxml
+++ b/Assets/UI Toolkit/UITemplate.uxml
@@ -71,27 +71,44 @@
     <ui:VisualElement name="TrainScreen" style="justify-content: space-between; align-items: stretch; flex-grow: 1; display: none;">
         <ui:VisualElement name="TrainMenu" class="popupBackground" style="top: 180px;">
             <ui:VisualElement name="TrainSkill0" style="flex-direction: row;">
-                <ui:Label tabindex="-1" text="Speed:" display-tooltip-when-elided="true" name="TrainSkill0Label" class="popupLabel" />
-                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill0Stars" class="popupLabel" />
+                <ui:Label tabindex="-1" text="Speed:" display-tooltip-when-elided="true" name="TrainSkill0Label" class="popupLabelSmall" />
+                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill0Stars" class="popupLabelSmall" />
                 <ui:Button text="Select" display-tooltip-when-elided="true" name="TrainSkill0Button" class="smallButton selectColor" />
             </ui:VisualElement>
             <ui:VisualElement name="TrainSkill1" style="flex-direction: row;">
-                <ui:Label tabindex="-1" text="Wisdom:" display-tooltip-when-elided="true" name="TrainSkill1Label" class="popupLabel" />
-                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill1Stars" class="popupLabel" />
+                <ui:Label tabindex="-1" text="Wisdom:" display-tooltip-when-elided="true" name="TrainSkill1Label" class="popupLabelSmall" />
+                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill1Stars" class="popupLabelSmall" />
                 <ui:Button text="Select" display-tooltip-when-elided="true" name="TrainSkill1Button" class="smallButton selectColor" />
             </ui:VisualElement>
             <ui:VisualElement name="TrainSkill2" style="flex-direction: row;">
-                <ui:Label tabindex="-1" text="Greed:" display-tooltip-when-elided="true" name="TrainSkill2Label" class="popupLabel" />
-                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill2Stars" class="popupLabel" />
+                <ui:Label tabindex="-1" text="Greed:" display-tooltip-when-elided="true" name="TrainSkill2Label" class="popupLabelSmall" />
+                <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="TrainSkill2Stars" class="popupLabelSmall" />
                 <ui:Button text="Select" display-tooltip-when-elided="true" name="TrainSkill2Button" class="smallButton selectColor" />
             </ui:VisualElement>
             <ui:VisualElement>
-                <ui:Label tabindex="-1" text="Price:" display-tooltip-when-elided="true" name="TrainSkillPrice" class="popupLabel" />
+                <ui:Label tabindex="-1" text="Price:" display-tooltip-when-elided="true" name="TrainSkillPrice" class="popupLabelSmall" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="TrainBottomBar" style="flex-direction: row; justify-content: space-between; align-items: stretch; flex-wrap: nowrap;">
             <ui:Button text="Back" display-tooltip-when-elided="true" name="TrainBackButton" class="smallButton backColor" />
             <ui:Button text="Confirm" display-tooltip-when-elided="true" name="TrainConfirmButton" class="smallButton confirmColor" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="BuyBirdScreen" class="popupBackground" style="justify-content: center; align-items: stretch; position: relative; top: 30%; display: none;">
+        <ui:Label tabindex="-1" text="Buy new birds?" display-tooltip-when-elided="true" class="popupLabel" />
+        <ui:Label tabindex="-1" text="Price: 4 gems" display-tooltip-when-elided="true" name="BuyBirdInfoLabel" class="popupLabel" />
+        <ui:VisualElement style="flex-direction: row; justify-content: space-between;">
+            <ui:Button text="Back" display-tooltip-when-elided="true" name="BuyBirdBackButton" class="smallButton backColor" />
+            <ui:Button text="Confirm" display-tooltip-when-elided="true" name="BuyBirdConfirmButton" class="smallButton confirmColor" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="NewBirdScreen" style="flex-grow: 1; justify-content: space-between; display: none;">
+        <ui:VisualElement class="popupBackground" style="align-items: center;">
+            <ui:Label tabindex="-1" text="New bird!" display-tooltip-when-elided="true" class="popupLabelSmall" />
+            <ui:Label tabindex="-1" text="Rocky" display-tooltip-when-elided="true" name="NewBirdNameLabel" class="popupLabelBig" style="-unity-font-style: bold;" />
+        </ui:VisualElement>
+        <ui:VisualElement style="align-items: flex-end;">
+            <ui:Button text="Continue" display-tooltip-when-elided="true" name="NewBirdContinueButton" class="smallButton confirmColor" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
