--- a/Assets/UI Toolkit/UITemplate.uxml
+++ b/Assets/UI Toolkit/UITemplate.uxml
@@ -105,10 +105,49 @@
     <ui:VisualElement name="NewBirdScreen" style="flex-grow: 1; justify-content: space-between; display: none;">
         <ui:VisualElement class="popupBackground" style="align-items: center;">
             <ui:Label tabindex="-1" text="New bird!" display-tooltip-when-elided="true" class="popupLabelSmall" />
-            <ui:Label tabindex="-1" text="Rocky" display-tooltip-when-elided="true" name="NewBirdNameLabel" class="popupLabelBig" style="-unity-font-style: bold;" />
+            <ui:Label tabindex="-1" text="&lt;u&gt;Rocky&lt;/u&gt; " display-tooltip-when-elided="true" name="NewBirdNameLabel" class="popupLabelBig" style="-unity-font-style: bold;" />
         </ui:VisualElement>
         <ui:VisualElement style="align-items: flex-end;">
             <ui:Button text="Continue" display-tooltip-when-elided="true" name="NewBirdContinueButton" class="smallButton confirmColor" />
         </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="BirdAlbumScreen" class="hideBackground" style="flex-grow: 1; align-items: center; justify-content: center; display: none;">
+        <ui:Label tabindex="-1" text="&lt;u&gt;Bird album&lt;/u&gt; " display-tooltip-when-elided="true" class="bigLabel" />
+        <ui:ScrollView horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="AlwaysVisible" class="popupBackground" style="height: 60%; margin-left: 50px; margin-right: 50px; margin-top: 50px; margin-bottom: 50px; flex-wrap: nowrap; flex-grow: 0; flex-direction: row; align-items: stretch; justify-content: center; flex-shrink: 1; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; background-color: rgb(46, 46, 46);">
+            <ui:VisualElement name="BirdAlbumCells" style="flex-direction: row; flex-wrap: wrap; justify-content: flex-start; align-items: flex-start; flex-grow: 0; flex-shrink: 1; padding-left: 10px; padding-right: 10px; padding-top: 10px; padding-bottom: 10px;">
+                <ui:Button text="?" display-tooltip-when-elided="true" class="albumCell" />
+                <ui:Button text="?" display-tooltip-when-elided="true" class="albumCell" />
+                <ui:Button text="?" display-tooltip-when-elided="true" class="albumCell grayColor" />
+                <ui:Button text="?" display-tooltip-when-elided="true" class="albumCell grayColor" />
+                <ui:Button text="?" display-tooltip-when-elided="true" class="albumCell grayColor" />
+            </ui:VisualElement>
+        </ui:ScrollView>
+        <ui:Button text="X" display-tooltip-when-elided="true" name="BirdAlbumBackButton" enable-rich-text="true" class="button backButton" />
+    </ui:VisualElement>
+    <ui:VisualElement name="BirdDetailsScreen" class="hideBackground" style="flex-grow: 1; justify-content: center; align-items: center; display: none;">
+        <ui:VisualElement class="popupBackground" style="background-color: rgb(46, 46, 46);">
+            <ui:VisualElement style="flex-direction: row; justify-content: center; padding-left: 50px; padding-right: 50px; padding-top: 50px; padding-bottom: 50px;">
+                <ui:Button text="?" display-tooltip-when-elided="true" name="BirdDetailsCell" class="albumCell" />
+                <ui:Label tabindex="-1" text="&lt;u&gt;Rocky&lt;/u&gt; " display-tooltip-when-elided="true" name="BirdDetailsNameLabel" class="popupLabelBig" />
+            </ui:VisualElement>
+            <ui:VisualElement style="padding-left: 50px; padding-right: 50px; padding-top: 50px; padding-bottom: 50px;">
+                <ui:VisualElement name="BirdDetailsSkill0" style="flex-direction: row;">
+                    <ui:Label tabindex="-1" text="Speed:" display-tooltip-when-elided="true" name="BirdDetailsSkill0Label" class="popupLabelSmall" />
+                    <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="BirdDetailsSkill0Stars" class="popupLabelSmall" />
+                </ui:VisualElement>
+                <ui:VisualElement name="BirdDetailsSkill1" style="flex-direction: row;">
+                    <ui:Label tabindex="-1" text="Wisdom:" display-tooltip-when-elided="true" name="BirdDetailsSkill1Label" class="popupLabelSmall" />
+                    <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="BirdDetailsSkill1Stars" class="popupLabelSmall" />
+                </ui:VisualElement>
+                <ui:VisualElement name="BirdDetailsSkill2" style="flex-direction: row;">
+                    <ui:Label tabindex="-1" text="Greed:" display-tooltip-when-elided="true" name="BirdDetailsSkill2Label" class="popupLabelSmall" />
+                    <ui:Label tabindex="-1" text="★★★★★" display-tooltip-when-elided="true" name="BirdDetailsSkill2Stars" class="popupLabelSmall" />
+                </ui:VisualElement>
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement style="align-items: stretch; flex-grow: 0; flex-direction: row; justify-content: flex-end;">
+            <ui:Button text="Pick Me" display-tooltip-when-elided="true" name="BirdDetailsPickButton" class="smallButton" />
+        </ui:VisualElement>
+        <ui:Button text="X" display-tooltip-when-elided="true" name="BirdDetailsBackButton" enable-rich-text="true" class="button backButton" />
     </ui:VisualElement>
 </ui:UXML>
